--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+  <a href="edit.html" style="
+    position: fixed;
+    bottom: 30px; right: 32px;
+    width: 60px; height: 60px; border-radius: 50%;
+    background: #c3a0ff; color: #fff; font-size: 2em; text-align: center; line-height: 60px;
+    box-shadow: 0 4px 18px #c3a0ff44; z-index: 1200; text-decoration: none;
+    transition: background .16s;
+  " title="編輯餐點">&#9881;</a>
   <div class="site-bg"></div>
   <main>
     <header>
