feat: Add tags filter and adjust UI

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
   <link rel="stylesheet" href="style/main.css">
   <link rel="stylesheet" href="style/meals-nav.css">
+  <link rel="stylesheet" href="style/tags-nav.css">
 </head>
 <body>
   <a href="edit.html" style="
@@ -28,6 +29,7 @@
       <p class="subtitle">三餐隨機決定器<br><span class="en">Let randomness set you free!</span></p>
     </header>
     <nav class="meals-nav sticky"></nav>
+    <div class="tags-nav"></div>
     <section class="card">
       <fieldset>
         <legend>今天不想吃（可多選）：</legend>
