Add excluded tag selection

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <div class="tags-nav"></div>
     <section class="card">
       <fieldset>
+        <legend>今天不想要的標籤（可多選）：</legend>
+        <select id="exclude-tag-select" multiple></select>
+      </fieldset>
+      <fieldset>
         <legend>今天不想吃（可多選）：</legend>
         <select id="exclude-select" multiple></select>
       </fieldset>
